--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
-
 android {
     namespace 'com.example.blooddonationapplication'
     compileSdk 32
@@ -42,6 +42,8 @@ dependencies {
     implementation "com.google.android.material:material:1.7.0"
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    implementation platform('com.google.firebase:firebase-bom:31.1.0')
 
 
 }
